Added input mask for pin entry. POST Response data being stored correctly. POST Response data global for other web pages.

--- a/src/account.html
+++ b/src/account.html
@@ -24,10 +24,10 @@
     </div>
     <script>
         window.onload = function(){
-            callBalance();
+            checkBalance();
         };
     </script>
-    <h1 id="balance"></h1>
+    <h1 id="bal"></h1>
 </div>
 <!--    <div>Icons made by <a href="https://www.flaticon.com/authors/srip" title="srip">srip</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
 </body>
