--- a/src/login.html
+++ b/src/login.html
@@ -31,13 +31,13 @@
                 <p class="pinTitle">Please enter your pin below:</p>
                 <form class="form-inline" id="postForm">
                     <div class="form-group">
-                        <input type="text" id="pin1" autofocus>
-                        <input type="text" id="pin2">
-                        <input type="text" id="pin3">
-                        <input type="text" id="pin4">
+                        <input type="password" id="pin1" autofocus maxlength="1">
+                        <input type="password" id="pin2" maxlength="1">
+                        <input type="password" id="pin3" maxlength="1">
+                        <input type="password" id="pin4" maxlength="1">
                     </div>
                     <div class="col">
-                        <button onclick="performPINRequest()"><a href="account.html">Submit</a></button>
+                        <button onclick="performPINRequest()"><a href="#">Submit</a></button>
                     </div>
                     <div class="col">
                         <button><a href="error.html">Clear</a></button>
