Added Clear button function.

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <div class="container-fluid">
         <div class="jumbotron">
             <p class="app-header">New Wave Financial Corp</p>
-            <img class="app-icon" src="./imgs/bank-icon.svg" />
+            <img class="app-icon" src="./imgs/bank-icon.svg" alt="Bank Icon"/>
         </div>
         <div class="row">
             <div class="col">
