--- a/src/login.html
+++ b/src/login.html
@@ -28,7 +28,7 @@
         <div class="row">
             <div class="col"></div>
             <div class="col">
-                <p class="pinTitle">Please enter your pin below:</p>
+                <h1 class="pinTitle">Please enter your pin below:</h1>
                 <form class="form-inline" id="postForm">
                     <div class="form-group">
                         <input type="password" id="pin1" autofocus maxlength="1">
@@ -40,7 +40,7 @@
                         <button onclick="performPINRequest()"><a href="#">Submit</a></button>
                     </div>
                     <div class="col">
-                        <button><a href="error.html">Clear</a></button>
+                        <button onclick="clearPIN()"><a href="#">Clear</a></button>
                     </div>
                 </form>
             </div>
