--- a/src/account.html
+++ b/src/account.html
@@ -20,7 +20,7 @@
 <div class="container-fluid">
     <div class="jumbotron">
         <p class="app-header">New Wave Financial Corp</p>
-        <img class="app-icon" src="imgs/bank-icon.svg" />
+        <img class="app-icon" src="imgs/bank-icon.svg" alt="Bank Icon"/>
     </div>
     <script>
         window.onload = function(){
