--- a/src/account.html
+++ b/src/account.html
@@ -27,7 +27,71 @@
             checkBalance();
         };
     </script>
-    <h1 id="bal"></h1>
+    <div>
+        <div class="row">
+            <div class="col" style="margin-top: 4%;">
+                <nav class="navbar">
+                    <!-- Links -->
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <button onclick="withdrawMoney()"><a href="#">Withdraw</a></button>
+                        </li>
+                        <li class="nav-item">
+                            <button onclick="depositMoney()"><a href="#" id="deposit">Deposit</a></button>
+                        </li>
+                        <li class="nav-item">
+                            <button onclick="transferMoney()"><a href="#" id="transfer">Transfer</a>
+                        </li>
+                        <li class="nav-item">
+                            <button onclick="logout()"><a href="#" id="logout">Logout</a></button>
+                        </li>
+                    </ul>
+
+                </nav>
+            </div>
+            <div class="col" style="margin-right: 27%;">
+                <div class="row">
+                    <div class="col" style="text-align: right;"><h1>Current Balance:</h1></div>
+                    <div class="col" style="text-align: left;"><h1 id="bal"></h1></div>
+                </div>
+                    <h1 id="transactionTitle">Withdraw Amount:</h1>
+                    <input id="amount" maxlength="3" type="text" autofocus />
+                    <div>
+                        <button id="submitTransaction" onclick="calculateAmount()">Submit</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col"></div>
+        </div>
+        <div id="overdraft">
+            <h3>* Your Atm allows an overdraft of up to £100</h3>
+        </div>
+
+        <!-- Custom Modal -->
+        <div class="modal" id="constructionModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h2 class="modal-title" id="modal-title"></h2>
+                        <button class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <h3>This is currently in development.</h3>
+                        <h3 style="margin-top: 1rem;">This will be available in future releases.</h3>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <h2>New Wave Financial Corp</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <!--    <div>Icons made by <a href="https://www.flaticon.com/authors/srip" title="srip">srip</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
 </body>
