--- a/src/index.html
+++ b/src/index.html
@@ -51,13 +51,11 @@
             </div>
             <div class="col">
                 <div class="intro">
-                    <p>Welcome To Old Wave Financial Corp</p>
-                    <p>abbb</p>
-                    <p>acccc</p>
-                    <p>addddd</p>
-                    <p>nothing</p>
-                    <p>Please login to continue</p>
-                    <button><a href="login.html">Login</a></button>
+                    <h1 id="intro">Hi From New Wave Financial Corp</h1>
+                    <h2 id="intro">This is our new banking app</h2>
+                    <h2 id="intro">Please login to continue</h2>
+                    <button style="margin-bottom: 2rem;margin-top: 3rem;"><a href="login.html">Login</a></button>
+                    <h2 id="intro">Email<a href="mailto:jayts2k@googlemail.com">Admin</a></h2>
                 </div>
             </div>
             <div class="col"></div>
