Added warning for overdraft.

--- a/src/account.html
+++ b/src/account.html
@@ -73,7 +73,7 @@
                     <!-- Modal Header -->
                     <div class="modal-header">
                         <h2 class="modal-title" id="modal-title"></h2>
-                        <button class="close" data-dismiss="modal">&times;</button>
+                        <button class="close" data-dismiss="constructionModal">&times;</button>
                     </div>
                     <!-- Modal body -->
                     <div class="modal-body">
@@ -102,6 +102,28 @@
                     <div class="modal-body">
                         <h3>You currently do not have enough funds to withdraw.</h3>
                         <h3 style="margin-top: 1rem;">Please check your overdraft amount.</h3>
+                    </div>
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <h2>New Wave Financial Corp</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Custom Modal -->
+        <!-- Warning Modal for going overdrawn -->
+        <div class="modal" id="warningModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h2 class="modal-title">Overdraft Notification</h2>
+                        <button class="warningClose" data-dismiss="modal">&times;</button>
+                    </div>
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <h3>With this transaction you will become overdrawn.</h3>
                     </div>
                     <!-- Modal footer -->
                     <div class="modal-footer">
